# test

./: .gitignore  MANIFEST.MF  README.md  SafeAgent.java  attack.py  audit.py  batch_tx.py  cast.py  contract_interact.py  contract_recon.py  flashloan.py  heimdall_integration.py  requirements.txt  sample_batch.yaml  selector_collide.py  selector_stats.py
devspace-wrapper-mcp/: README.md  package.json
devspace-wrapper-mcp/examples/: start.sh
devspace-wrapper-mcp/src/: server.js
hko-weather-trader/: .env.example  README.md  docker-compose.yml  pyproject.toml
hko-weather-trader/backend/app/: config.py  main.py
hko-weather-trader/backend/app/collectors/: aviation.py  hko_csv.py  hko_parsers.py  hko_rhrread.py  hko_snapshot.py  hko_textonly.py  open_meteo_ensemble.py
hko-weather-trader/backend/app/db/: sqlite_store.py
hko-weather-trader/backend/app/features/: temperature_trend.py
hko-weather-trader/backend/app/markets/: polymarket_gamma.py  registry.py
hko-weather-trader/backend/app/models/: rule_model.py
hko-weather-trader/backend/app/strategy/: edge.py  filters.py
hko-weather-trader/backend/tests/: test_edge.py  test_filters.py  test_hko_parsers.py  test_temperature_trend.py
hko-weather-trader/docs/: architecture.md  data-sources.md  roadmap.md  strategy-east8.md  strategy-filter.md
hko-weather-trader/scripts/: find_polymarket_weather.py  run_once.py  show_recent_snapshots.py
prompt-enhancer/: README.md  manifest.json  options.html  popup.html  popup.js  service-worker.js
src/: DIA.sol
test/: DIA_Audit.t.sol
(+3 files in other folders)
